fix dropdown on mobile

--- a/index.css
+++ b/index.css
@@ -65,6 +65,7 @@ p {
   .dropdown-content {
     display: none;
     position: absolute;
+    background-color: rgba(245,245, 245,0.9);
     min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
